<resources>
    <string name="app_name">Reverse Market</string>
    <string name="title_activity_navigation">MainActivity</string>
    <string name="title_buy">Buy</string>
    <string name="title_sell">Sell</string>
    <string name="title_profile">Profile</string>
    <string name="title_product">Product</string>
    <string name="price_title">Price</string>

    <string name="searchHint">search</string>
    <string name="fragment_filter_title">FILTER</string>
    <string name="save_filter_btn_text">SAVE FILTER</string>
    <string name="filter_sorting_title">Sorting</string>
    <string name="filter_selected_title">Selected</string>
    <string name="filter_price_title">Price</string>
    <string name="login_facebook">Login with Facebook</string>
    <string name="login_google">Login with Google</string>
    <string name="fragment_login_logo_description" translatable="false">Logo</string>

    <string name="frg_buy_title">My announcement</string>
    <string name="buy_info_title">Creating announcement</string>

    <string name="favorites">Favorites</string>
    <string name="orders">Orders</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign out</string>

    <string name="settings_label">Settings</string>
    <string name="settings_photos_label">Photos</string>
    <string name="settings_address_label">Adress</string>
    <string name="settings_name_label">Name</string>
    <string name="settings_name_hint">Enter your name...</string>
    <string name="save_settings">Save</string>

    <string name="photo_title">Photo</string>
    <string name="description_title">Description</string>
    <string name="description_hint">Tell us something about this product…</string>
    <string name="price_hint">Enter the price…</string>
    <string name="amount_title">Amount</string>
    <string name="amount_hint">Enter product amount…</string>
    <string name="item_name_hint">Enter product name…</string>
    <string name="address_title">Address</string>
    <string name="create">Create</string>
    <string name="suggest">Suggest</string>
    <string name="save_template">Save template</string>
    <string name="sell_request">Sell request</string>
    <string name="favorite">Favorite</string>

    <string name="naming">Naming</string>
    <string name="naming_hint">Enter a short name…</string>
    <string name="region">Region</string>
    <string name="region_hint">Region…</string>
    <string name="save">Save</string>
    <string name="city">City</string>
    <string name="city_hint">City, Town, Village…</string>
    <string name="house">House</string>
    <string name="house_hint">House…</string>
    <string name="building">Building</string>
    <string name="building_hint">Building…</string>
    <string name="flat">Flat</string>
    <string name="flat_hint">Flat…</string>
    <string name="index">Index</string>
    <string name="index_hint">Index…</string>
    <string name="name">Name</string>
    <string name="name_hint">Name…</string>
    <string name="surname">Surname</string>
    <string name="surname_hint">Surname…</string>
    <string name="father_name">Father name</string>
    <string name="father_name_hint">Father name…</string>

    <string name="sell_button">Sell</string>
    <string name="buy_button">Buy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sold">Sold</string>
    <string name="bought">Bought</string>
    <string name="server_client_id" translatable="false">1011272468065-4d5befdc86q57f3oohisd600k3dkthuh.apps.googleusercontent.com</string>
    <string name="date_title">Date</string>
    <string name="tags_title">Tags</string>
    <string name="description_tab">description</string>
    <string name="category">Category</string>
    <string name="best_proposal_tab">best proposal</string>
    <string name="Name">Name</string>
    <string name="item_name">Item name</string>
    <string name="street">Street</string>
    <string name="choose_photo">Pick photo</string>
    <string name="loading">Loaging...</string>
    <string name="no_internet_connection">No internet connection</string>

</resources>