<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/frg_address__title_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="20dp">

        <TextView
            android:id="@+id/frg_address__title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/def_dimen"
            android:layout_marginTop="@dimen/def_dimen"
            android:layout_marginEnd="@dimen/def_dimen"
            android:gravity="center"
            android:padding="@dimen/small_dimen"
            android:text="@string/address_title"
            android:textAllCaps="true"
            android:textColor="@color/colorText"
            android:textSize="21sp" />

        <ImageView
            android:id="@+id/frg_address__back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/big_dimen"
            android:padding="8dp"
            android:src="@drawable/ic_arrow_left" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/frg_address__scroll_view_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:elevation="@dimen/def_dimen">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/editTextTitleStyle"
                android:text="@string/naming" />

            <EditText
                android:id="@+id/frg_address__naming"
                style="@style/editTextStyle"
                android:elevation="4dp"
                android:hint="@string/naming_hint"
                android:inputType="text" />

            <TextView
                style="@style/editTextTitleStyle"
                android:text="@string/region" />

            <EditText
                android:id="@+id/frg_address__region"
                style="@style/editTextStyle"
                android:elevation="4dp"
                android:hint="@string/region_hint"
                android:inputType="text" />

            <TextView
                style="@style/editTextTitleStyle"
                android:text="@string/city" />

            <EditText
                android:id="@+id/frg_address__city"
                style="@style/editTextStyle"
                android:elevation="4dp"
                android:hint="@string/city_hint"
                android:inputType="text" />

            <TextView
                style="@style/editTextTitleStyle"
                android:text="@string/street" />

            <EditText
                android:id="@+id/frg_address__street"
                style="@style/editTextStyle"
                android:elevation="4dp"
                android:hint="@string/city_hint"
                android:inputType="text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        style="@style/editTextTitleStyle"
                        android:text="@string/house" />

                    <EditText
                        android:id="@+id/frg_address__house"
                        style="@style/editTextStyle"
                        android:layout_marginBottom="@dimen/def_dimen"
                        android:elevation="4dp"
                        android:hint="@string/house_hint"
                        android:inputType="numberSigned" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        style="@style/editTextTitleStyle"
                        android:text="@string/building" />

                    <EditText
                        android:id="@+id/frg_address__building"
                        style="@style/editTextStyle"
                        android:layout_marginBottom="@dimen/def_dimen"
                        android:elevation="4dp"
                        android:hint="@string/building_hint"
                        android:inputType="numberSigned" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        style="@style/editTextTitleStyle"
                        android:text="@string/flat" />

                    <EditText
                        android:id="@+id/frg_address__flat"
                        style="@style/editTextStyle"
                        android:layout_marginBottom="@dimen/def_dimen"
                        android:elevation="4dp"
                        android:hint="@string/flat_hint"
                        android:inputType="numberSigned" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        style="@style/editTextTitleStyle"
                        android:text="@string/index" />

                    <EditText
                        android:id="@+id/frg_address__index"
                        style="@style/editTextStyle"
                        android:layout_marginBottom="@dimen/def_dimen"
                        android:elevation="4dp"
                        android:hint="@string/index_hint"
                        android:inputType="numberSigned" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                style="@style/editTextTitleStyle"
                android:text="@string/name" />

            <EditText
                android:id="@+id/frg_address__name"
                style="@style/editTextStyle"
                android:elevation="4dp"
                android:hint="@string/name_hint"
                android:inputType="text" />

            <TextView
                style="@style/editTextTitleStyle"
                android:text="@string/surname" />

            <EditText
                android:id="@+id/frg_address__surname"
                style="@style/editTextStyle"
                android:elevation="4dp"
                android:hint="@string/surname_hint"
                android:inputType="text" />

            <TextView
                style="@style/editTextTitleStyle"
                android:text="@string/father_name" />

            <EditText
                android:id="@+id/frg_address__father_name"
                style="@style/editTextStyle"
                android:elevation="4dp"
                android:hint="@string/father_name_hint"
                android:inputType="text" />

            <Button
                android:id="@+id/frg_address__save_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/x_huge_dimen"
                android:background="@drawable/filter_save_btn_background"
                android:text="@string/save"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>