<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x_huge_dimen"
        android:layout_marginTop="@dimen/huge_dimen"
        android:text="@string/photo_title"
        android:textAllCaps="true"
        android:textColor="@color/colorText"
        android:textSize="18sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/layout_new_product__photo_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x_huge_dimen"
        android:layout_marginTop="@dimen/small_dimen"
        android:orientation="horizontal"
        android:overScrollMode="never"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/layout_address_add_item" />

    <TextView
        android:text="@string/description_title"
        style="@style/editTextTitleStyle"/>

    <EditText
        android:id="@+id/layout_new_product__description_text"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="@dimen/x_huge_dimen"
        android:layout_marginTop="@dimen/small_dimen"
        android:layout_marginEnd="@dimen/x_huge_dimen"
        android:background="@drawable/white_rounded_background"
        android:elevation="10dp"
        android:gravity="top"
        android:hint="@string/description_hint"
        android:padding="@dimen/def_dimen" />

    <TextView
        android:text="@string/price_title"
        style="@style/editTextTitleStyle"/>

    <EditText
        android:id="@+id/layout_new_product__price"
        android:hint="@string/price_hint"
        android:inputType="numberDecimal"
        android:elevation="10dp"
        style="@style/editTextStyle" />

    <TextView
        android:text="@string/amount_title"
        style="@style/editTextTitleStyle"/>

    <EditText
        android:id="@+id/layout_new_product__amount"
        android:hint="@string/amount_hint"
        android:inputType="numberDecimal"
        android:elevation="10dp"
        style="@style/editTextStyle" />

    <include
        android:id="@+id/frg_buy_info__address"
        layout="@layout/layout_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>