<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_login">

    <fragment
        android:id="@+id/navigation_buy"
        android:name="com.spbstu.reversemarket.buy.BuyFragment"
        android:label="@string/title_buy"
        tools:layout="@layout/fragment_buy" />

    <fragment
        android:id="@+id/navigation_sell"
        android:name="com.spbstu.reversemarket.sell.presentation.SellFragment"
        android:label="@string/title_sell"
        tools:layout="@layout/fragment_sell" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.spbstu.reversemarket.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.spbstu.reversemarket.login.LoginFragment"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_navigation_login_to_navigation_buy"
            app:popUpTo="@+id/navigation_login"
            app:popUpToInclusive="true"
            app:destination="@id/navigation_buy" />
    </fragment>

</navigation>