<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_upper_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:elevation="@dimen/def_dimen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="8dp"
            android:text="@string/settings_label"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/settings_back_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_close_product"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_upper_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="40dp">
            <include
                android:id="@+id/frg_settings__address"
                layout="@layout/layout_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/x_huge_dimen"
                android:layout_marginTop="@dimen/huge_dimen"
                android:text="@string/settings_name_label"
                android:textAllCaps="true"
                android:textColor="@color/colorText"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/frg_settings__name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/x_huge_dimen"
                android:layout_marginTop="@dimen/small_dimen"
                android:layout_marginBottom="@dimen/big_dimen"
                android:layout_marginEnd="@dimen/x_huge_dimen"
                android:background="@drawable/white_rounded_background"
                android:elevation="@dimen/def_dimen"
                android:gravity="top"
                android:hint="@string/settings_name_hint"
                android:inputType="text"
                android:padding="@dimen/def_dimen"
                android:paddingStart="@dimen/huge_dimen"
                android:paddingEnd="@dimen/huge_dimen"
                android:textSize="18sp" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/frg_settings__save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/x_huge_dimen"
        android:paddingTop="@dimen/def_dimen"
        android:paddingBottom="@dimen/def_dimen"
        android:background="@drawable/filter_save_btn_background"
        android:text="@string/save_settings"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>