<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_upper_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:elevation="@dimen/def_dimen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="8dp"
            android:text="@string/settings_label"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/settings_back_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_close_product"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_upper_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="24dp"
            android:paddingBottom="40dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/huge_dimen"
                android:layout_marginEnd="@dimen/huge_dimen"
                android:layout_marginBottom="@dimen/huge_dimen"
                android:gravity="start|center_vertical"
                android:text="@string/settings_photos_label"
                android:textColor="@color/colorBlack"
                android:textSize="22sp" />


            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="24dp"
                android:background="@drawable/settings_photo_rectangle"
                android:elevation="@dimen/small_dimen"
                android:src="@drawable/ic_logo" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="24dp"
                android:background="@drawable/settings_photo_rectangle"
                android:elevation="@dimen/small_dimen"
                android:src="@drawable/ic_plus_circle" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/huge_dimen"
                android:layout_marginEnd="@dimen/huge_dimen"
                android:layout_marginBottom="@dimen/huge_dimen"
                android:gravity="start|center_vertical"
                android:text="@string/settings_address_label"
                android:textColor="@color/colorBlack"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/huge_dimen"
                android:layout_marginEnd="@dimen/huge_dimen"
                android:layout_marginBottom="@dimen/huge_dimen"
                android:gravity="start|center_vertical"
                android:text="@string/settings_name_label"
                android:textColor="@color/colorBlack"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/settings_name_field"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/rounded_input_field"
                android:elevation="@dimen/small_dimen"
                android:layout_marginBottom="@dimen/huge_dimen"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textAlignment="textStart"
                android:textCursorDrawable="@drawable/search_black_cursor"
                android:textSize="18sp" />

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>